--- a/backend_ingress.yaml
+++ b/backend_ingress.yaml
@@ -2,11 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: backend
-  name: backend-ingress
+  name: team20b-backend-ingress
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
-    alb.ingress.kubernetes.io/security-groups: team20b-backend-sg
 spec:
   ingressClassName: alb
   rules:
